modify Makefiles to use in osx

--- a/vmlinuz/Makefile
+++ b/vmlinuz/Makefile
@@ -1,10 +1,12 @@
+PFX = /Users/criny/Desktop/os_dev_tools/root/bin/x86_64-pc-linux-
+
 all: blue-kernel vmlinuz
 
 blue-kernel:
 	make -C ../kernel
 	
 vmlinuz:
-	objdump -D ../kernel/kernel.elf > ../kernel/kernel.dump
+	$(PFX)objdump -D ../kernel/kernel.elf > ../kernel/kernel.dump
 	cat grub_header ../kernel/kernel.bin > vmlinuz-0-blue
 
 clean:
